fixtures/invalid/duplicate-attribute.lmk
@task status="todo" status="done"
Duplicate attributes are invalid.
